game works but on infinite loop (no winner or loser)

--- a/5_Milestone_Project-1/Project.ipynb
+++ b/5_Milestone_Project-1/Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,48 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# game board\n",
-    "def display_board(position, mark):\n",
-    "    b = [' '] * 10\n",
-    "    b[position] = mark\n",
-    "    \n",
-    "    print('    ' + '|   |' + '    ')\n",
-    "    print(f'  {b[7]} ' + f'| {b[8]} |' + f' {b[9]}')\n",
-    "    print('____' + '|___|' + '____')\n",
-    "    print('    ' + '|   |' + '    ')\n",
-    "    print(f'  {b[4]} ' + f'| {b[5]} |' + f' {b[6]}')\n",
-    "    print('____' + '|___|' + '____')\n",
-    "    print('    ' + '|   |' + '    ')\n",
-    "    print(f'  {b[1]} ' + f'| {b[2]} |' + f' {b[3]}')\n",
-    "    print('    ' + '|   |' + '    ')\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display_board(2, 'X')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# choose to go first (X) or second (O)\n",
     "def choose_turn():\n",
-    "    choices = ['X', 'O']\n",
     "    mark = None\n",
     "    \n",
-    "    while mark not in choices:\n",
+    "    while mark != 'X' or mark != 'O':\n",
     "        mark = input('Player 1, choose X or O: ')\n",
     "    \n",
     "        if mark == 'X':\n",
@@ -67,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,55 +44,15 @@
       "Player 1, choose X or O: X\n",
       "Player One will go first!\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'X'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "choose_turn()"
+    "mark = choose_turn()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Player 1, choose X or O: a\n",
-      "Please choose X or O\n",
-      "Player 1, choose X or O: O\n",
-      "Player Two will go first!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'O'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "choose_turn()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,25 +74,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Are you ready to play (Yes or No)? Yes\n"
+     ]
+    }
+   ],
    "source": [
-    "ready_play()"
+    "play = ready_play()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# player picks a tic-tac-toe squre\n",
     "# bottom: 1 - 3; middle: 4 - 6; top: 7 - 9\n",
-    "def position():\n",
+    "def position(player, mark = \"X\"):\n",
     "    \n",
     "    while True:\n",
-    "        choice = input(\"Pick your square (1 - 9): \")\n",
+    "        choice = input(f\"{player} ({mark}), pick your square (1 - 9): \")\n",
     "        \n",
     "        if choice.isdigit():\n",
     "            if int(choice) in range(1, 10):\n",
@@ -174,31 +109,94 @@
     "            print(\"That number is out of range (1 - 9)\")\n",
     "            continue\n",
     "        \n",
-    "        print(\"That't not a digit...\") "
+    "        print(\"That's not a digit...\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Player 1 (X), pick your square (1 - 9): 1\n"
+     ]
+    }
+   ],
    "source": [
-    "position()"
+    "square = position('Player 1', mark)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tic_tac_toe():\n",
-    "    print('Welcome to Tic-Tac-Toe')\n",
-    "    choose_turn()\n",
+    "# game board\n",
+    "b = [' '] * 10\n",
+    "\n",
+    "def display_board(position, mark):\n",
+    "    b[position] = mark\n",
     "    \n",
+    "    print('    ' + '|   |' + '    ')\n",
+    "    print(f'  {b[7]} ' + f'| {b[8]} |' + f' {b[9]}')\n",
+    "    print('____' + '|___|' + '____')\n",
+    "    print('    ' + '|   |' + '    ')\n",
+    "    print(f'  {b[4]} ' + f'| {b[5]} |' + f' {b[6]}')\n",
+    "    print('____' + '|___|' + '____')\n",
+    "    print('    ' + '|   |' + '    ')\n",
+    "    print(f'  {b[1]} ' + f'| {b[2]} |' + f' {b[3]}')\n",
+    "    print('    ' + '|   |' + '    ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "closing parenthesis '}' does not match opening parenthesis '(' (<ipython-input-9-821aed6fd0d8>, line 18)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-9-821aed6fd0d8>\"\u001b[1;36m, line \u001b[1;32m18\u001b[0m\n\u001b[1;33m    square = position('Player 2', \"O\"})\u001b[0m\n\u001b[1;37m                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m closing parenthesis '}' does not match opening parenthesis '('\n"
+     ]
+    }
+   ],
+   "source": [
+    "# game board\n",
+    "b = [' '] * 10\n",
+    "\n",
+    "def tic_tac_toe():\n",
+    "    print(\"Welcome to Tic-Tac-Toe!\")\n",
+    "    # player one chooses to go first or second\n",
+    "    mark = choose_turn()\n",
+    "    \n",
+    "    # ask user if ready to play\n",
     "    if ready_play():\n",
-    "        clear_output()\n",
-    "        display_board()\n",
+    "        # when player one goes first\n",
+    "        while mark == \"X\":\n",
+    "            # player one marks X on a position\n",
+    "            square = position('Player 1')\n",
+    "            # display board with X on marked position\n",
+    "            display_board(square, mark)\n",
+    "            # player two marks O on a position\n",
+    "            square = position('Player 2', \"O\")\n",
+    "            # display board with O on marked position\n",
+    "            display_board(square, 'O')\n",
+    "        # when player one goes second \n",
+    "        while mark == \"O\":\n",
+    "            # player two marks X on a position\n",
+    "            square = position('Player 2')\n",
+    "            # display board with X on marked position\n",
+    "            display_board(square, mark)\n",
+    "            # player one marks O on a position\n",
+    "            square = position('Player 1', \"O\")\n",
+    "            # display board with O on marked position\n",
+    "            display_board(square, 'X')\n",
     "    return"
    ]
   },
@@ -208,8 +206,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "range(0, 10)"
+    "tic_tac_toe()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
