--- a/5_Milestone_Project-1/Simple User Interaction.ipynb
+++ b/5_Milestone_Project-1/Simple User Interaction.ipynb
@@ -52,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pick a position (0, 1, 2): 0\n"
+      "Pick a position (0, 1, 2): 1\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -95,10 +95,10 @@
     {
      "data": {
       "text/plain": [
-       "['hello', 1, 2]"
+       "[0, 'hello', 2]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,13 @@
       "Type a string to place at position: hello\n",
       "Here is the list:\n",
       "[0, 'hello', 2]\n",
-      "Keep playing? (Y or N) N\n"
+      "Keep playing? (Y or N) Y\n",
+      "Here is the list:\n",
+      "[0, 'hello', 2]\n",
+      "Pick a position (0, 1, 2): 0\n",
+      "Type a string to place at position: Crap\n",
+      "Here is the list:\n",
+      "['Crap', 'hello', 2]\n"
      ]
     }
    ],
@@ -189,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,30 +215,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Here is the list:\n",
-      "[0, 1, 2]\n",
-      "Pick a position (0, 1, 2): 4\n",
-      "Invalid choice!\n",
-      "Pick a position (0, 1, 2): 1\n",
-      "Type a string to place at position: crap\n",
-      "Here is the list:\n",
-      "[0, 'crap', 2]\n",
-      "Keep playing? (Y or N) y\n",
-      "Please choose Y or N\n",
-      "Keep playing? (Y or N) Y\n",
-      "Here is the list:\n",
-      "[0, 'crap', 2]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "game()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
