--- a/5_Milestone_Project-1/Project.ipynb
+++ b/5_Milestone_Project-1/Project.ipynb
@@ -15,21 +15,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# choose to go first (X) or second (O)\n",
-    "def choose_turn():\n",
-    "    mark = None\n",
-    "    \n",
-    "    while mark != 'X' or mark != 'O':\n",
-    "        mark = input('Player 1, choose X or O: ')\n",
-    "    \n",
-    "        if mark == 'X':\n",
-    "            print(\"Player One will go first!\")\n",
-    "            break\n",
-    "        elif mark == 'O':\n",
-    "            print(\"Player Two will go first!\")\n",
-    "            break\n",
-    "        print('Please choose X or O')\n",
-    "    return mark"
+    "board = [\" \"] * 10\n",
+    "\n",
+    "def display_board(board):\n",
+    "    clear_output()\n",
+    "    print('    ' + '|   |' + '    ')\n",
+    "    print(f'  {board[7]} ' + f'| {board[8]} |' + f' {board[9]}')\n",
+    "    print('____' + '|___|' + '____')\n",
+    "    print('    ' + '|   |' + '    ')\n",
+    "    print(f'  {board[4]} ' + f'| {board[5]} |' + f' {board[6]}')\n",
+    "    print('____' + '|___|' + '____')\n",
+    "    print('    ' + '|   |' + '    ')\n",
+    "    print(f'  {board[1]} ' + f'| {board[2]} |' + f' {board[3]}')\n",
+    "    print('    ' + '|   |' + '    ')"
    ]
   },
   {
@@ -41,13 +39,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Player 1, choose X or O: X\n",
-      "Player One will go first!\n"
+      "    |   |    \n",
+      "    |   |  \n",
+      "____|___|____\n",
+      "    |   |    \n",
+      "    |   |  \n",
+      "____|___|____\n",
+      "    |   |    \n",
+      "    |   |  \n",
+      "    |   |    \n"
      ]
     }
    ],
    "source": [
-    "mark = choose_turn()"
+    "display_board(board)"
    ]
   },
   {
@@ -56,20 +61,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ask player if he/she is ready to play\n",
-    "def ready_play():\n",
-    "    choices = [\"Yes\", \"No\"]\n",
-    "    answer = None\n",
+    "# choose to go first (X) or second (O)\n",
+    "def player_mark():\n",
+    "    '''\n",
+    "    Output = (player 1 marker, player 2 marker)\n",
+    "    '''\n",
+    "    mark = None\n",
     "    \n",
-    "    while answer not in choices:\n",
-    "        answer = input(\"Are you ready to play (Yes or No)? \")\n",
-    "        \n",
-    "        if answer == \"Yes\":\n",
-    "            return True\n",
-    "        elif answer == \"No\":\n",
-    "            return False\n",
-    "        \n",
-    "        print(\"Please enter Yes or No\")"
+    "    while mark != 'X' and mark != 'O':\n",
+    "        mark = input('Player 1, choose X or O: ').upper()\n",
+    "    \n",
+    "    if mark == 'X':\n",
+    "        return ('X', 'O')\n",
+    "    return ('O', 'X')"
    ]
   },
   {
@@ -81,23 +85,109 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Are you ready to play (Yes or No)? Yes\n"
+      "Player 1, choose X or O: x\n"
      ]
     }
    ],
    "source": [
-    "play = ready_play()"
+    "player1_marker, player2_marker = player_mark()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'X'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "player1_marker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'O'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "player2_marker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ask player if he/she is ready to play\n",
+    "def ready_play():\n",
+    "    answer = None\n",
+    "    \n",
+    "    while not (answer == 'Y' or answer == 'N'):\n",
+    "        answer = input(\"Are you ready to play (Y or N)? \").upper()\n",
+    "        \n",
+    "    if answer == \"Y\":\n",
+    "        return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Are you ready to play (Y or N)? y\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ready_play()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# player picks a tic-tac-toe squre\n",
     "# bottom: 1 - 3; middle: 4 - 6; top: 7 - 9\n",
-    "def position(player, mark = \"X\"):\n",
+    "def position(player, mark = 'X'):\n",
+    "    print(board())\n",
     "    \n",
     "    while True:\n",
     "        choice = input(f\"{player} ({mark}), pick your square (1 - 9): \")\n",
@@ -114,99 +204,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def place_marker(board, mark, position):\n",
+    "    board[position] = mark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "place_marker(board, '$', 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Player 1 (X), pick your square (1 - 9): 1\n"
+      "    |   |    \n",
+      "    |   |  \n",
+      "____|___|____\n",
+      "    |   |    \n",
+      "    |   |  \n",
+      "____|___|____\n",
+      "    |   |    \n",
+      "  $ |   |  \n",
+      "    |   |    \n"
      ]
     }
    ],
    "source": [
-    "square = position('Player 1', mark)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# game board\n",
-    "b = [' '] * 10\n",
-    "\n",
-    "def display_board(position, mark):\n",
-    "    b[position] = mark\n",
-    "    \n",
-    "    print('    ' + '|   |' + '    ')\n",
-    "    print(f'  {b[7]} ' + f'| {b[8]} |' + f' {b[9]}')\n",
-    "    print('____' + '|___|' + '____')\n",
-    "    print('    ' + '|   |' + '    ')\n",
-    "    print(f'  {b[4]} ' + f'| {b[5]} |' + f' {b[6]}')\n",
-    "    print('____' + '|___|' + '____')\n",
-    "    print('    ' + '|   |' + '    ')\n",
-    "    print(f'  {b[1]} ' + f'| {b[2]} |' + f' {b[3]}')\n",
-    "    print('    ' + '|   |' + '    ')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "closing parenthesis '}' does not match opening parenthesis '(' (<ipython-input-9-821aed6fd0d8>, line 18)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-9-821aed6fd0d8>\"\u001b[1;36m, line \u001b[1;32m18\u001b[0m\n\u001b[1;33m    square = position('Player 2', \"O\"})\u001b[0m\n\u001b[1;37m                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m closing parenthesis '}' does not match opening parenthesis '('\n"
-     ]
-    }
-   ],
-   "source": [
-    "# game board\n",
-    "b = [' '] * 10\n",
-    "\n",
-    "def tic_tac_toe():\n",
-    "    print(\"Welcome to Tic-Tac-Toe!\")\n",
-    "    # player one chooses to go first or second\n",
-    "    mark = choose_turn()\n",
-    "    \n",
-    "    # ask user if ready to play\n",
-    "    if ready_play():\n",
-    "        # when player one goes first\n",
-    "        while mark == \"X\":\n",
-    "            # player one marks X on a position\n",
-    "            square = position('Player 1')\n",
-    "            # display board with X on marked position\n",
-    "            display_board(square, mark)\n",
-    "            # player two marks O on a position\n",
-    "            square = position('Player 2', \"O\")\n",
-    "            # display board with O on marked position\n",
-    "            display_board(square, 'O')\n",
-    "        # when player one goes second \n",
-    "        while mark == \"O\":\n",
-    "            # player two marks X on a position\n",
-    "            square = position('Player 2')\n",
-    "            # display board with X on marked position\n",
-    "            display_board(square, mark)\n",
-    "            # player one marks O on a position\n",
-    "            square = position('Player 1', \"O\")\n",
-    "            # display board with O on marked position\n",
-    "            display_board(square, 'X')\n",
-    "    return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tic_tac_toe()"
+    "display_board(board)"
    ]
   },
   {
