--- a/5_Milestone_Project-1/Simple User Interaction.ipynb
+++ b/5_Milestone_Project-1/Simple User Interaction.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "[0, 'hello', 2]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,9 +175,23 @@
       "Here is the list:\n",
       "[0, 'hello', 2]\n",
       "Pick a position (0, 1, 2): 0\n",
-      "Type a string to place at position: Crap\n",
+      "Type a string to place at position: hello\n",
       "Here is the list:\n",
-      "['Crap', 'hello', 2]\n"
+      "['hello', 'hello', 2]\n",
+      "Keep playing? (Y or N) Y\n",
+      "Here is the list:\n",
+      "['hello', 'hello', 2]\n",
+      "Pick a position (0, 1, 2): 0\n",
+      "Type a string to place at position: hello\n",
+      "Here is the list:\n",
+      "['hello', 'hello', 2]\n",
+      "Keep playing? (Y or N) Y\n",
+      "Here is the list:\n",
+      "['hello', 'hello', 2]\n",
+      "Pick a position (0, 1, 2): 1\n",
+      "Type a string to place at position: hello\n",
+      "Here is the list:\n",
+      "['hello', 'hello', 2]\n"
      ]
     }
    ],
