--- a/4_Methods_and_Functions/Logic with Functions.ipynb
+++ b/4_Methods_and_Functions/Logic with Functions.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "False"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,10 +66,29 @@
     "    for num in num_list:\n",
     "        if num % 2 == 0:\n",
     "            return True\n",
-    "    \n",
     "    return False\n",
     "\n",
     "check_even_list([1, 3, 5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_even_list([1, 4, 6])"
    ]
   },
   {
