--- a/4_Methods_and_Functions/Methods and Functions Homework.ipynb
+++ b/4_Methods_and_Functions/Methods and Functions Homework.ipynb
@@ -13,16 +13,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# wite a funciton that checks if a number is in a given range (inclusive of high and low)\n",
     "def ran_check(num, low, high):\n",
     "    if num in range(low, high + 1):\n",
-    "        print(f'{num} is in range of {low} and {high}')\n",
-    "    else:\n",
-    "        print('not in rage')"
+    "        return (f'{num} is in range of {low} and {high}')\n",
+    "    return('not in rage')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'5 is in range of 2 and 7'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ran_check(5, 2, 7)"
    ]
   },
   {
@@ -31,17 +50,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 is in range of 2 and 7\n",
-      "not in rage\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'not in rage'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ran_check(5, 2, 7)\n",
-    "ran_check(5, 6, 8)"
+    "ran_check(5, 6, 9)"
    ]
   },
   {
