milestone project1: player_choice() works perfectly

--- a/5_Milestone_Project-1/Validating User Input.ipynb
+++ b/5_Milestone_Project-1/Validating User Input.ipynb
@@ -2,43 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def user_choice():\n",
-    "    choice = 'NotInt'\n",
     "    \n",
-    "    while not choice.isdigit():\n",
-    "        choice = input('Please enter a number (0-10)')\n",
+    "    while True:\n",
+    "        choice = input('Please enter a number (0-10): ')\n",
     "        \n",
-    "        if not choice.isdigit():\n",
-    "            print('That is not a digit!')\n",
-    "    \n",
-    "    return int(choice)"
+    "        if choice.isdigit() and int(choice) in range(0, 11):\n",
+    "            return int(choice)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter a number (0-10): a\n",
+      "Please enter a number (0-10): 12\n",
+      "Please enter a number (0-10): 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "user_choice()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "user_choice()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,16 +55,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "some_value.isdigit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,25 +93,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result in acceptable_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result not in acceptable_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,46 +173,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_choice()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def user_choice():\n",
+    "    choice = 'wrong'\n",
     "    \n",
-    "    while True:\n",
-    "        choice = input('Enter a number (0 - 10)')\n",
+    "    while not choice in range(0, 11) and not choice.isdigit():\n",
+    "        choice = input('Enter a number (0 - 10) ')\n",
     "        \n",
-    "        if choice.isdigit():\n",
-    "            if int(choice) in range(0, 10):\n",
-    "                return int(choice)\n",
-    "\n",
-    "            print('You are out of acceptable range (0 - 10)')\n",
-    "            continue\n",
-    "        \n",
-    "        print(\"That's not a digit!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter a number (0 - 10)a\n",
-      "That's not a digit!\n"
-     ]
-    }
-   ],
-   "source": [
-    "user_choice()"
+    "    return int(choice)"
    ]
   },
   {
@@ -182,13 +190,6 @@
    "source": [
     "user_choice()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
