--- a/5_Milestone_Project-1/Project 1.ipynb
+++ b/5_Milestone_Project-1/Project 1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write a function that uses the random module to randomly decide which player goes first\n",
+    "import random\n",
+    "\n",
+    "def flip_first():\n",
+    "    flip = random.randint(0, 1)\n",
+    "    \n",
+    "    if flip == 0:\n",
+    "        return 'Player 1'\n",
+    "    return 'Player 2'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,48 +108,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# write a function that uses the random module to randomly decide which player goes first\n",
-    "import random\n",
-    "\n",
-    "def choose_first():\n",
-    "    flip = random.randint(0, 1)\n",
-    "    \n",
-    "    if flip == 0:\n",
-    "        return 'Player 1'\n",
-    "    return 'Player 2'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# write a function that returns a boolean indicating whether a space on the board if freely available\n",
-    "def space_check(board, position):\n",
+    "def position_free(board, position):\n",
     "    return board[position] == \" \""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write a function that checks if the board is full, returning a boolean.\n",
+    "# write a function that checks if the board is full, returning False if there's room available and True if it's full.\n",
     "def full_board_check(board):\n",
     "    \n",
     "    for i in range (1, 10):\n",
-    "        space_check(board, i)"
+    "        if position_free(board, i):\n",
+    "            return False\n",
+    "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,9 +142,28 @@
     "def player_choice(board):\n",
     "    position = 0\n",
     "    \n",
-    "    while position not in range(1, 10) or not space_check(board, position):\n",
-    "        position = int(input('Choose a position (1 - 9): '))\n",
-    "    return position"
+    "    while True:\n",
+    "        position = input('Choose a position (1 - 9): ')\n",
+    "        \n",
+    "        if position.isdigit() and int(position) in range(1, 10) and not full_board_check(board):\n",
+    "            return int(position)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Choose a position (1 - 9): a\n"
+     ]
+    }
+   ],
+   "source": [
+    "player_choice(board)"
    ]
   },
   {
@@ -155,6 +176,66 @@
     "def replay():\n",
     "    choice = input('Play again? (Yes or No): ')\n",
     "    return choice == 'Yes'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tic_tac_toe():\n",
+    "    print('Welcome to Tic Tac Toe')\n",
+    "    # while loop to keep running the game\n",
+    "    while True:\n",
+    "        # board\n",
+    "        board = [' '] * 10\n",
+    "        # player markers\n",
+    "        player1_mark, player2_mark = player_mark()\n",
+    "        # choose turn\n",
+    "        turn = choose_first()\n",
+    "        print(f'{turn} will go first')\n",
+    "        # ask if ready to play\n",
+    "        play_game = input(\"Ready to play (y or n)?\")\n",
+    "        if play_game == 'y':\n",
+    "            game_on = True\n",
+    "        game_on = False\n",
+    "\n",
+    "        while game_on:\n",
+    "            if turn == 'Player 1':\n",
+    "                # show board\n",
+    "                display_board(board)\n",
+    "                # choose position\n",
+    "                # place marker on position\n",
+    "                # check if they won\n",
+    "                # check if there is a tie\n",
+    "                # no tie and no win? next player turn\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "         # break out of while loop on replay()\n",
+    "        if not replay():\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "me = 'philip'\n",
+    "me.isdigit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "me in range(0, 10)"
    ]
   }
  ],
