--- a/5_Milestone_Project-1/Project 1.ipynb
+++ b/5_Milestone_Project-1/Project 1.ipynb
@@ -112,15 +112,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "win_check(board, 'X')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# write a function that returns a boolean indicating whether a space on the board if freely available\n",
     "def position_free(board, position):\n",
     "    return board[position] == \" \""
@@ -135,19 +126,10 @@
     "# write a function that checks if the board is full, returning False if there's room available and True if it's full.\n",
     "def board_full(board):\n",
     "    \n",
-    "    for i in range (1, 10):\n",
-    "        if position_free(board, i):\n",
+    "    for num in range(1, 10):\n",
+    "        if position_free(board, num):\n",
     "            return False\n",
     "    return True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "board_full(board)"
    ]
   },
   {
@@ -215,11 +197,11 @@
     "                    display_board(board)\n",
     "                    print('Player 1 has won!')\n",
     "                    game_on = False\n",
-    "                else: # if Player 1 hasn't won but the board is full: tie game\n",
+    "                else: # if Player 1 hasn't won and the board is full: tie game\n",
     "                    if board_full(board):\n",
     "                        print('Tie Game...')\n",
     "                        game_on = False\n",
-    "                    else: # if Player 1 hasn't won and the board isn't full: Player2 turn\n",
+    "                    else: # if Player 1 hasn't won and the board isn't full: Player 2 turn\n",
     "                        turn = 'Player 2'\n",
     "            else:\n",
     "                # show board\n",
