OOP: magic and dunder methods

--- a/6_OOP/Inheritance and Polymorphism.ipynb
+++ b/6_OOP/Inheritance and Polymorphism.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "class Dog(Animal):\n",
     "    def __init__(self, location, breed):\n",
-    "        Animal.__init__(self, location)\n",
+    "        super().__init__(location)\n",
     "        self.breed = breed\n",
     "    def who_am_i(self):\n",
     "        print(\"I'm a dog!\")\n",
