--- a/6_OOP/Magic and Dunder Methods.ipynb
+++ b/6_OOP/Magic and Dunder Methods.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,12 +80,13 @@
     "        return f\"{self.title} by {self.author}\"\n",
     "    def __len__(self):\n",
     "        return self.pages\n",
-    "    def __del__(ser)"
+    "    def __del__(self):\n",
+    "        print(\"You've deleted a book object\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -120,13 +121,30 @@
        "200"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(book)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You've deleted a book object\n"
+     ]
+    }
+   ],
+   "source": [
+    "del book"
    ]
   },
   {
