Project 2 Warmup: created card class and suit, rank and value global variables

--- a/8_Errors_and_Exceptions/Errors and Exceptions Handling.ipynb
+++ b/8_Errors_and_Exceptions/Errors and Exceptions Handling.ipynb
@@ -16,8 +16,8 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "30\n"
      ]
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,17 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please provide a number: 20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "number2 = input(\"Please provide a number: \")"
    ]
@@ -77,15 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Add went well\n",
-      "20\n"
+      "Add went well\n20\n"
      ]
     }
    ],
@@ -101,18 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "20"
       ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 7
     }
    ],
    "source": [
@@ -147,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,35 +158,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Please provide any number: q\n",
-      "That's not a number\n",
-      "Game Over\n",
-      "Please provide any number: q\n",
-      "That's not a number\n",
-      "Game Over\n",
-      "Please provide any number: q\n",
-      "That's not a number\n",
-      "Game Over\n"
+      "That's not a number\nGame Over\n"
      ]
     }
    ],
    "source": [
     "ask_for_int()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -214,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
