--- a/9_Milestone_Project-2/Project Warmup/Card, Deck and Player Classes.ipynb
+++ b/9_Milestone_Project-2/Project Warmup/Card, Deck and Player Classes.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Deck class creates 52 cards with the Card class\n",
+    "# Deck class creates 52 cards with the Card class, which it shuffles and deals\n",
     "class Deck:\n",
     "    \n",
     "    def __init__(self):\n",
@@ -55,6 +55,38 @@
     "    def deal_one(self):\n",
     "        return self.all_cards.pop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Player:\n",
+    "    \n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        self.all_cards = []\n",
+    "    \n",
+    "    def remove_one(self):\n",
+    "        return self.all_cards.pop(0)\n",
+    "        \n",
+    "    def add_cards(self, new_cards):\n",
+    "        if type(new_cards) == type([]):\n",
+    "            self.all_cards.extend(new_cards)\n",
+    "        else:\n",
+    "            self.all_cards.append(new_cards)\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f\"{self.name} has {len(self.all_cards)} cards.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
