milestone project 2: hand and chips classes

--- a/3_Python_Statements/Statement Test.ipynb
+++ b/3_Python_Statements/Statement Test.ipynb
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "st = 'Print only the wods that start with s in this sentence'.split()\n",
+    "st = 'Print only the words that start with s in this sentence'.split()\n",
     "\n",
     "for word in st:\n",
     "    if word == 's':\n",
