--- a/9_Milestone_Project-2/Black Jack.ipynb
+++ b/9_Milestone_Project-2/Black Jack.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,73 +64,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The deck has: \n",
-      "Three of Diamonds\n",
-      "Two of Hearts\n",
-      "Eight of Spades\n",
-      "Six of Clubs\n",
-      "Five of Spades\n",
-      "Two of Clubs\n",
-      "Seven of Clubs\n",
-      "Seven of Spades\n",
-      "Six of Hearts\n",
-      "Four of Diamonds\n",
-      "Nine of Clubs\n",
-      "Ace of Spades\n",
-      "Jack of Clubs\n",
-      "Two of Spades\n",
-      "King of Spades\n",
-      "Three of Spades\n",
-      "Three of Clubs\n",
-      "Ten of Spades\n",
-      "Nine of Spades\n",
-      "Eight of Hearts\n",
-      "Jack of Diamonds\n",
-      "King of Clubs\n",
-      "Ace of Clubs\n",
-      "Four of Hearts\n",
-      "Queen of Spades\n",
-      "Ace of Hearts\n",
-      "Ten of Clubs\n",
-      "Seven of Diamonds\n",
-      "Five of Diamonds\n",
-      "Six of Spades\n",
-      "Ace of Diamonds\n",
-      "King of Diamonds\n",
-      "Jack of Spades\n",
-      "Five of Clubs\n",
-      "Four of Clubs\n",
-      "Ten of Diamonds\n",
-      "Two of Diamonds\n",
-      "Nine of Hearts\n",
-      "Four of Spades\n",
-      "Jack of Hearts\n",
-      "Queen of Clubs\n",
-      "Queen of Hearts\n",
-      "King of Hearts\n",
-      "Three of Hearts\n",
-      "Nine of Diamonds\n",
-      "Seven of Hearts\n",
-      "Eight of Clubs\n",
-      "Ten of Hearts\n",
-      "Six of Diamonds\n",
-      "Queen of Diamonds\n",
-      "Five of Hearts\n",
-      "Eight of Diamonds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "deck = Deck()\n",
-    "deck.shuffle()\n",
-    "print(deck)"
+    "# player (either computer or human)\n",
+    "class Hand: \n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.cards = []\n",
+    "        self.value = 0 # keep track of current hand total (value over 21 is a losing hand)\n",
+    "        self.aces = 0 # keep track of aces\n",
+    "        \n",
+    "    def add_card(self, card):\n",
+    "        # card passed in from Deck.deal() --> single Card(suit, rank)\n",
+    "        self.cards.append(card)\n",
+    "        self.value += values[card.rank]\n",
+    "        \n",
+    "        # track aces\n",
+    "        if card.rank == \"Ace\":\n",
+    "            self.aces += 1\n",
+    "    \n",
+    "    def adjust_for_ace(self):\n",
+    "        \n",
+    "        # if total value > 21 and I still have an ace\n",
+    "        # change my ace to be a 1 instead of an 11\n",
+    "        while self.value > 21 and self.aces:\n",
+    "            self.value -= 10\n",
+    "            self.aces -= 1"
    ]
   },
   {
@@ -138,7 +99,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Chips:\n",
+    "    \n",
+    "    def __init__(self, total = 100):\n",
+    "        self.total = total\n",
+    "        self.bet = 0\n",
+    "    \n",
+    "    def win_bet(self):\n",
+    "        self.total += self.bet\n",
+    "    \n",
+    "    def lose_bet(self):\n",
+    "        self.total -= self.bet"
+   ]
   }
  ],
  "metadata": {
