--- a/8_Errors_and_Exceptions/Errors and Exceptions Handling.ipynb
+++ b/8_Errors_and_Exceptions/Errors and Exceptions Handling.ipynb
@@ -16,8 +16,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "30\n"
      ]
@@ -73,10 +73,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Add went well\n20\n"
+      "Add went well\n",
+      "20\n"
      ]
     }
    ],
@@ -96,14 +97,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "20"
       ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "execution_count": 7
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -162,10 +163,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "That's not a number\nGame Over\n"
+      "That's not a number\n",
+      "Game Over\n"
      ]
     }
    ],
@@ -190,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
