milestone project 2: take_bet function

--- a/9_Milestone_Project-2/Black Jack.ipynb
+++ b/9_Milestone_Project-2/Black Jack.ipynb
@@ -11,9 +11,7 @@
     "suits = ('Hearts', 'Diamonds', 'Spades', 'Clubs')\n",
     "ranks = ('Two', 'Three', 'Four', 'Five', 'Six', 'Seven', 'Eight', 'Nine', 'Ten', 'Jack', 'Queen', 'King', 'Ace')\n",
     "values = { 'Two':2, 'Three':3, 'Four':4, 'Five':5, 'Six':6, 'Seven':7, 'Eight':8, \n",
-    "            'Nine':9, 'Ten':10, 'Jack':10, 'Queen':10, 'King':10, 'Ace':11 }\n",
-    "\n",
-    "playing = True"
+    "            'Nine':9, 'Ten':10, 'Jack':10, 'Queen':10, 'King':10, 'Ace':11 }"
    ]
   },
   {
@@ -112,6 +110,33 @@
     "    def lose_bet(self):\n",
     "        self.total -= self.bet"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def take_bet(chips):\n",
+    "    \n",
+    "    while True:\n",
+    "        try:\n",
+    "            chips.bet = int(input(\"How many chips would you like to bet? \"))\n",
+    "        except ValueError:\n",
+    "            print(\"Please provide an number\")\n",
+    "        else:\n",
+    "            if chips.bet > chips.total:\n",
+    "                print(\"You don't have enough chips. You have {}\".format(chips.total))\n",
+    "            else:\n",
+    "                break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
