--- a/9_Milestone_Project-2/Black Jack.ipynb
+++ b/9_Milestone_Project-2/Black Jack.ipynb
@@ -71,7 +71,7 @@
     "    \n",
     "    def __init__(self):\n",
     "        self.cards = []\n",
-    "        self.value = 0 # keep track of current hand total (value over 21 is a losing hand)\n",
+    "        self.value = 0 # keep track of the current hand total (value over 21 is a losing hand)\n",
     "        self.aces = 0 # keep track of aces\n",
     "        \n",
     "    def add_card(self, card):\n",
@@ -86,7 +86,7 @@
     "    def adjust_for_ace(self):\n",
     "        \n",
     "        # if total value > 21 and I still have an ace\n",
-    "        # change my ace to be a 1 instead of an 11\n",
+    "        # change my ace to a 1 instead of an 11\n",
     "        while self.value > 21 and self.aces:\n",
     "            self.value -= 10\n",
     "            self.aces -= 1"
@@ -123,12 +123,75 @@
     "        try:\n",
     "            chips.bet = int(input(\"How many chips would you like to bet? \"))\n",
     "        except ValueError:\n",
-    "            print(\"Please provide an number\")\n",
+    "            print(\"Please provide an number.\")\n",
     "        else:\n",
     "            if chips.bet > chips.total:\n",
-    "                print(\"You don't have enough chips. You have {}\".format(chips.total))\n",
+    "                print(\"You don't have enough chips. You have {} chips.\".format(chips.total))\n",
     "            else:\n",
     "                break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hit(deck, hand):\n",
+    "    hand.add_card(deck.deal())\n",
+    "    hand.adjust_for_ace()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hit_or_stand(deck, hand):\n",
+    "    global playing # to control an upcoming while loop\n",
+    "    \n",
+    "    while True:\n",
+    "        x = input(\"Hit or Stand(Enter h or s)? \")\n",
+    "        \n",
+    "        if x[0].lower() == 'h':\n",
+    "            hit(deck, hand)\n",
+    "        elif x[0].lower() == 's':\n",
+    "            print(\"Player stands. It's now the dealer's turn\")\n",
+    "            playing = False\n",
+    "        else:\n",
+    "            print(\"I did't understand your input. Please enter h or s.\")\n",
+    "            continue\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_shome(player, dealer):\n",
+    "    # show only one of the dealer's cards\n",
+    "    print(\"\\n Dealer's Hand: \")\n",
+    "    print(\"First card hidden!\")\n",
+    "    print(dealer.cards[1])\n",
+    "    \n",
+    "    # show all (2 cards) of the player's cards\n",
+    "    print(\"\\n Player's hand: \", *player.cards, sep=\"\\n\")\n",
+    "\n",
+    "def show_all(player, dealer):\n",
+    "    # show all of the dealer's cards\n",
+    "    print(\"\\n Dealer's hand: \", *dealer.cards, sep=\"\\n\")\n",
+    "    \n",
+    "    # display the value of dealer's hand\n",
+    "    print(f\"Value of dealer's hand is {dealer.value} \")\n",
+    "    \n",
+    "    # show all of the player's cards\n",
+    "    print(\"\\n Player's hand: \", *player.cards, sep=\"\\n\")\n",
+    "    \n",
+    "    # display the value of player's hand\n",
+    "    print(f\"Value of player's hand is {player.value} \")"
    ]
   },
   {
