--- a/9_Milestone_Project-2/Black Jack.ipynb
+++ b/9_Milestone_Project-2/Black Jack.ipynb
@@ -171,6 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# display dealer's card and player's cards\n",
     "def show_shome(player, dealer):\n",
     "    # show only one of the dealer's cards\n",
     "    print(\"\\n Dealer's Hand: \")\n",
@@ -180,6 +181,7 @@
     "    # show all (2 cards) of the player's cards\n",
     "    print(\"\\n Player's hand: \", *player.cards, sep=\"\\n\")\n",
     "\n",
+    "# display all of the dealer's and player's cards\n",
     "def show_all(player, dealer):\n",
     "    # show all of the dealer's cards\n",
     "    print(\"\\n Dealer's hand: \", *dealer.cards, sep=\"\\n\")\n",
@@ -199,7 +201,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def player_busts(player, dealer, chips):\n",
+    "    print(\"Bust Player!\")\n",
+    "    chips.lose_bet()\n",
+    "\n",
+    "def player_wins(player, dealer, chips):\n",
+    "    print(\"Player Wins!\")\n",
+    "    chips.win_bet()\n",
+    "    \n",
+    "def dealer_busts(player, dealer, chips):\n",
+    "    print(\"Dealer Busts!\")\n",
+    "    chips.win_bet()\n",
+    "\n",
+    "def dealer_wins(player, dealer, chips):\n",
+    "    print(\"Dealer Wins!\")\n",
+    "    chips.lost_bet()\n",
+    "\n",
+    "def push(player, dealer):\n",
+    "    print(\"Dealer and Player tie! PUSH\")"
+   ]
   }
  ],
  "metadata": {
