Advanced Python Modules: Opening and Reading Files and Folders (OS Module)

--- a/12_Advanced_Python_Modules/Collections Module.ipynb
+++ b/12_Advanced_Python_Modules/Collections Module.ipynb
@@ -519,10 +519,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sammy[0]"
+   ]
   }
  ],
  "metadata": {
