--- a/03_Python_Statements/If, Elif and Else Statements.ipynb
+++ b/03_Python_Statements/If, Elif and Else Statements.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I'm not hungry\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "hungry = False\n",
     "\n",
@@ -24,17 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Money is cool!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "location = 'Bank'\n",
     "\n",
@@ -48,17 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Charlie\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = \"Charlie\"\n",
     "\n",
@@ -72,35 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "'return' outside function (<ipython-input-3-8bd500705081>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-8bd500705081>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    return(\"You're boo\")\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m 'return' outside function\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = \"Philip\"\n",
     "\n",
     "if name == \"Boo\":\n",
-    "    return\"You're boo\"\n",
+    "    return \"You're boo\"\n",
     "elif name == \"Philip\":\n",
-    "    return\"You're the one!\"\n",
-    "\n",
-    "return \"Fuck you\""
+    "    return \"You're the one!\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
