--- a/04_Methods_and_Functions/Lambda, Map and Filter.ipynb
+++ b/04_Methods_and_Functions/Lambda, Map and Filter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -38,12 +38,33 @@
        "[1, 4, 9, 16, 25]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "list(map(square, nums))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "square = lambda num: num**2\n",
     "list(map(square, nums))"
    ]
   },
@@ -104,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nums = [1,2,3,4,5,6]"
+    "nums = [1, 2, 3, 4, 5, 6]"
    ]
   },
   {
