Web Scraping: Quotes to Scrape

--- a/13_Web_Scraping/Grabbing a Title.ipynb
+++ b/13_Web_Scraping/Grabbing a Title.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -142,13 +142,33 @@
        "'Example Domain'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "soup.select(\"title\")[0].getText()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<title>Example Domain</title>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.select('title')[0]"
    ]
   },
   {
@@ -178,6 +198,28 @@
    ],
    "source": [
     "type(site_paragraph[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<p>This domain is for use in illustrative examples in documents. You may use this\n",
+       "     domain in literature without prior coordination or asking for permission.</p>,\n",
+       " <p><a href=\"https://www.iana.org/domains/example\">More information...</a></p>]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "site_paragraph"
    ]
   },
   {
